# Tracking

./: .gitignore
checkpoints/: fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_nus-mono3d_finetune.py
scripts/: prepare_gt.py  run_detection.py  visualize_bev.py
tracking_ws/scripts/: nu.py
tracking_ws/src/fcos3d_ros/: CMakeLists.txt  env.sh  package.xml
tracking_ws/src/fcos3d_ros/launch/: fcos3d.launch
tracking_ws/src/fcos3d_ros/scripts/: fcos3d_node.py
